--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,8 @@
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300");
 
 /*
+	Tender Buttons
+	tender-buttons.com
 	Identity by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
@@ -261,11 +263,14 @@
 				margin-bottom: 0;
 			}
 
-	label {
+	label, p.about {
 		color: #313f47;
 		display: block;
 		font-size: 0.9em;
 		margin: 0 0 0.75em 0;
+	}
+	p.about.name {
+		font-size: .65em;
 	}
 
 	input[type="text"],
@@ -586,6 +591,23 @@
 			}
 
 				ul.actions li:last-child {
+					padding-right: 0;
+				}
+
+		ul.formats {
+			cursor: default;
+			list-style: none;
+			padding-left: 0;
+		}
+
+			ul.formats li {
+				display: block;
+				padding: 0;
+				vertical-align: middle;
+				font-size: 0.8em;
+			}
+
+				ul.formats li:last-child {
 					padding-right: 0;
 				}
 
