--- a/public/css/main.css
+++ b/public/css/main.css
@@ -825,6 +825,8 @@
 
 				#footer .copyright li:first-child {
 					border-left: 0;
+					padding-left: 0;
+					margin-left: 0;
 				}
 
 /* Wrapper */
